<resources>
    <string name="app_name">Broasted</string>
    <!--<string name="app_name">Friends Knows Best</string>-->
    <!--<string name="facebook_app_id">156564188127616</string>-->

    <string name="login_first">Login or Register first!</string>
    <string name="categoryromantic">category_romantic</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_games">No games</string>
    <string name="title_widget_detail">Games Details</string>
    <string name="already_registered">That email is already registered</string>
    <string name="incorrect_data">Incorrect Data</string>
    <string name="weak_password">Weak Password</string>
    <string name="auth_failed">Auth failed:</string>

    <string name="email" translatable="false">email</string>
    <string name="name" translatable="false">name</string>
    <string name="username" translatable="false">username</string>
    <string name="press_back_to_leave">Press back again to leave.</string>
    <string name="suth_facebook_success">Authentication with Facebook Success!</string>
    <string name="wait_player_see_result">Wait for all players to view the results!</string>
    <string name="wait_player_vote">You already voted! Wait for other players!</string>
    <string name="thanks_for_playing">Wait for next version to see detailed results and more features. Thanks for playing!</string>
    <string name="game_over">Game Over</string>
    <string name="shared_userphotourl_key">userPhotoUrl</string>
    <string name="deeplink_domain">https://r2qvt.app.goo.gl/</string>
    <string name="deeplink_link">http://ijzepeda.com/</string>
    <string name="deeplink_package">com.ijzepeda.fkb</string>
    <string name="deeplink_not_installed_store_link">https://play.google.com/store/apps/details?id=com.ijzepeda.fkb</string>
    <string name="deeplink_parse_url_game_id">http://ijzepeda.com/addGame/</string>
    <string name="you_won">You won</string>
    <string name="friend_won">" won"</string>
    <string name="im_more_likely_to">Your Friend thought that You are more likely to :</string>
    <string name="your_invite_to_join">Your invite To Join:</string>
    <string name="you_are_in_that_game">You are in that game</string>
    <string name="should_start_new_game">You should start a new game</string>
    <string name="leave_game">Leave Game</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="sure">SURE</string>
    <string name="cancel">CANCEL</string>
    <string name="invalid_mail">invalid email.</string>
    <string name="at_least_6_chars">At least 6 character.</string>
    <string name="your_friends_though_that">"Your friends thought that "</string>
    <string name="is_more_likely_to">" is more likely to :"</string>
    <string name="says">" says..."</string>
    <string name="exclamation_marks">!!!</string>
    <string name="you_have_been_invited_to_a_game_it_is_available_in_load_game_screen">You have been invited to a game. It is available in Load Game screen</string>
    <string name="select_a_friend">Select a Friend</string>
    <string name="send_button_description">Having a Friend selected, send your vote Button.</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="quick_game">Quick Game</string>
    <string name="online">Online</string>
    <string name="new_game">New Game</string>
    <string name="why_would_you_vote_him">Why would you vote for \n</string>
    <string name="fill_fields">Please fill all fields</string>
    <string name="auth_failed_login1">Authentication failed.</string>
    <string name="fb_auth_success">Authentication with Facebook Success!</string>
    <string name="add_friends_dl_main">Add some friends</string>
    <string name="lets_play_main">Lets play!</string>
    <string name="select_image">Select Image</string>
    <string name="name_of_the_game">Name of the game</string>
    <string name="unlimited_counter">Unlimited Counter</string>
    <string name="number_of_cards">Number of cards</string>
    <string name="invite_more_friends">Invite more friends</string>
    <string name="invite_friends_description">Invite friends to join your game</string>
    <string name="create_game_button_description">Create game</string>
    <string name="select_new_profile_image">Select new profile Image</string>
    <string name="profile_pic_preview">Profile picture preview</string>
    <string name="save_new_profile_picture">Save new profile picture</string>
    <string name="won">WON</string>
    <string name="winner_of_this_card_title_description">Winner of this card</string>
    <string name="default_winner_text">Most friends thought that te winner is more likely to be like that card</string>
    <string name="winner_profile_picture">Winner profile picture</string>
    <string name="they_are_to_blame">They are to blame:</string>
    <string name="show_all_the_voters">Show all the voters</string>
    <string name="counter">Counter</string>
    <string name="continue_btn">Continue</string>
    <string name="continue_hint">Continue with the game</string>
    <string name="logout">Logout</string>
    <string name="save_settings_button">Save settings button</string>
    <string name="logout_button">Logout button</string>
    <string name="save_btn">Save</string>
    <string name="notifications">Notifications</string>
    <string name="favorite_cards">Favorite cards:</string>
    <string name="favorite_cards_settings">Favorite Cards</string>
    <string name="earned_cards">Earned cards:</string>
    <string name="earned_cards_default_value">0</string>
    <string name="select_image_from_gallery_button">Select image from gallery button</string>
    <string name="card_title">Card Title</string>
    <string name="card_text">Card text</string>
    <string name="delete_game">delete game</string>
    <string name="cards_drawn">cards drawn</string>
    <string name="number_of_players">number of players</string>
    <string name="player_that_voted_for_the_winner">Player that voted for the winner</string>
    <string name="name_of_player">Name of player</string>
    <string name="player_card">player card</string>
    <string name="player_profile_picture">Player profile picture</string>
    <string name="already_voted_mark_description">If is shown a gray checkmark , this player has already voted</string>
    <string name="check_to_select_this_player">Check to select this player</string>
    <string name="player_name_on_card">Player name on card</string>
    <string name="register">Register</string>
    <string name="load_game">Load Game</string>
    <string name="settings">Settings</string>
    <string name="results">Results</string>
    <string name="join_game">Joining game</string>
    <string name="card">card</string>
    <string name="adapter_players">"Players: "</string>
    <string name="adapter_game">"Game: "</string>
    <string name="adapter_cards">Cards drawn:</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="fotourl_placeholder">FOTOURL</string>
    <string name="romantic_cat">Romantic</string>
    <string name="transition_profilepic">profilePic</string>
    <string name="load_game_button">Load Game</string>


    <array name="category_romantic">

        <item>
            1. Who is most likely to be the first to have children?
        </item>
        <item>
            2. Who is most likely to have sex most often?
        </item>
        <item>
            3. Who is most likely to build the biggest house?
        </item>
        <item>
            4. Who is most likely to move to another country?
        </item>
        <item>
            5. Who is most likely to have the most children?
        </item>
        <item>
            6. Who is most likely to celebrate their Golden Anniversary?
        </item>
        <item>
            7. Who is most likely to get cheated on?
        </item>
        <item>
            8. Who is most likely to become very fat within the next five years?
        </item>
        <item>
            9. Who is most likely to give birth twice in one year?
        </item>
        <item>
            10. Who is most likely to win the lottery and separate?
        </item>

    </array>


</resources>
