<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <ImageView
        android:layout_gravity="center"
        android:gravity="center"
        android:src="@drawable/placeholder"
        android:layout_width="195dp"
        android:layout_height="196dp"
        android:id="@+id/userImageView"
        android:contentDescription="@string/profile_pic_preview"
        android:nextFocusDown ="@+id/editImageBtn"
        android:nextFocusRight ="@+id/editImageBtn"
       />

    <ImageButton
        android:gravity="center"
        android:layout_gravity="center"
        android:src="@drawable/ic_mode_edit_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editImageBtn"
        android:textAlignment="center"

        android:contentDescription="@string/select_image_from_gallery_button"
        android:nextFocusDown="@+id/saveBtn"
        android:nextFocusRight="@+id/saveBtn"
        android:nextFocusUp="@id/userImageView"
        android:nextFocusLeft="@id/userImageView"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:text="@string/earned_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/earnedCards"
            android:layout_weight="1"
            style="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:text="@string/earned_cards_default_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/earnedCardsTextView"
            android:layout_weight="1"
            style="@style/TextAppearance.AppCompat.Large"

            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:text="@string/favorite_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/favCards"
            android:layout_weight="1"
            style="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:text="@string/favorite_cards_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/favCardsBtn"
            android:layout_weight="1"
            android:theme="@style/AppTheme.Button"
            style="@style/Widget.AppCompat.Button.Small" />

    </LinearLayout>

    <Switch
        android:text="@string/notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NotificationSwitch"

        style="@style/TextAppearance.AppCompat.Large"
        android:visibility="gone" />
    <Button
        android:text="@string/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/saveBtn"
        android:background="@color/bel_grey_text"
        android:theme="@style/AppTheme.Button"
        style="@style/Widget.AppCompat.Button.Small"

        android:clickable="false"

        android:contentDescription="@string/save_settings_button"
        android:nextFocusDown="@+id/LogoutBtn"
        android:nextFocusRight="@+id/LogoutBtn"
        android:nextFocusUp="@id/editImageBtn"
        android:nextFocusLeft="@id/editImageBtn"
        />

    <Button
        android:text="@string/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LogoutBtn"
        android:theme="@style/AppTheme.Button"
        style="@style/Widget.AppCompat.Button.Small"

        android:contentDescription="@string/logout_button"
        android:nextFocusUp ="@id/saveBtn"
        android:nextFocusLeft ="@id/saveBtn"
        />
</LinearLayout>
