<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ijzepeda.friendsknowsbest.NewGame">

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gameNameTextView"
        android:hint="@string/name_of_the_game"

        android:inputType="textPersonName"
        android:lines="1"
        android:nextFocusDown="@+id/numberCardsTextView"
        android:nextFocusRight="@+id/numberCardsTextView"
        />

    <Switch
        android:text="@string/unlimited_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/counterSwitch"
        android:visibility="gone" />

    <AutoCompleteTextView
        android:id="@+id/numberCardsTextView"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_of_cards"
        android:lines="1"
        android:inputType="number"
        android:nextFocusDown="@+id/inviteFriendsBtn"
        android:nextFocusRight="@+id/inviteFriendsBtn"
android:nextFocusUp="@id/gameNameTextView"
android:nextFocusLeft="@id/gameNameTextView"
        />

    <Button
        android:text="@string/invite_more_friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inviteFriendsBtn"
        android:theme="@style/AppTheme.Button"
        style="@style/Widget.AppCompat.Button.Small"

        android:contentDescription="@string/invite_friends_description"
        android:nextFocusDown="@+id/nextInviteBtn"
        android:nextFocusRight="@+id/nextInviteBtn"
        android:nextFocusUp="@id/numberCardsTextView"
        android:nextFocusLeft="@id/numberCardsTextView"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_arrow_forward_black_24dp"
        android:id="@+id/nextInviteBtn"
        android:layout_gravity="bottom|end"
        android:theme="@style/AppTheme.Button"
        style="@style/Widget.AppCompat.Button.Small"
android:tint="@color/cardview_light_background"
        android:contentDescription="@string/create_game_button_description"
        android:nextFocusDown="@+id/inviteFriendsBtn"
        android:nextFocusRight="@+id/inviteFriendsBtn"
        />
</LinearLayout>
