<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    tools:context="LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/toolbar_elevation"
        android:layout_marginBottom="@dimen/gamecard_margin"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:nextFocusDown="@+id/textinputlyout"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinputlyout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:nextFocusDown="@+id/password"
                android:nextFocusRight="@+id/password">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"

                    android:nextFocusDown="@+id/email_register_button"
                    android:nextFocusRight="@+id/email_register_button"

                    android:nextFocusUp="@id/email"
                    android:nextFocusLeft="@id/email"
                    />

            </android.support.design.widget.TextInputLayout>
            <!--style="?android:textAppearanceSmall"-->
            <Button
                android:id="@+id/email_register_button"

                android:theme="@style/AppTheme.Button"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:hint="@string/action_register"
                android:textStyle="bold"
                android:nextFocusDown="@+id/email_sign_in_button"
                android:nextFocusRight="@+id/email_sign_in_button"

                android:nextFocusUp="@id/password"
                android:nextFocusLeft="@id/password"
                />
            <Button
                android:id="@+id/email_sign_in_button"
                android:theme="@style/AppTheme.Button"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:hint="@string/action_sign_in"
                android:textStyle="bold"
                android:nextFocusDown="@+id/fbLogin"
                android:nextFocusRight="@+id/fbLogin"

                android:nextFocusUp="@id/email_register_button"
                android:nextFocusLeft="@id/email_register_button"/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fbLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                android:hint="@string/facebook_login"

                android:nextFocusUp="@id/email_sign_in_button"
                android:nextFocusLeft="@id/email_sign_in_button"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
